force-app/main/default/objects/WhatsappDanone__WS_Config__mdt/WhatsappDanone__WS_Config__mdt.object-meta.xml
<CustomObject>
    <label>WS_Config</label>
    <pluralLabel>WS_Config</pluralLabel>
</CustomObject>