force-app/main/default/objects/WhatsappDanone__WS_Config__mdt/fields/WhatsappDanone__api_key__c.field-meta.xml
<CustomField>
    <fullName>WhatsappDanone__api_key__c</fullName>
    <label>api_key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>