force-app/main/default/objects/WhatsappDanone__WS_Config__mdt/fields/WhatsappDanone__IsProduction__c.field-meta.xml
<CustomField>
    <fullName>WhatsappDanone__IsProduction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsProduction</label>
    <type>Checkbox</type>
</CustomField>