force-app/main/default/objects/WhatsappDanone__WS_Config__mdt/fields/WhatsappDanone__url__c.field-meta.xml
<CustomField>
    <fullName>WhatsappDanone__url__c</fullName>
    <label>url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>